# firewall-platform

./: .gitignore
backend/firewall/firewall-service/: CMakeLists.txt  firewall_config.txt
backend/firewall/firewall-service/headers/: EthernetFrame.h  FilterRule.h  FilterRuleList.h  FirewallService.h  PacketParser.h  RawSocket.h  Rules.h
backend/firewall/firewall-service/src/: FilterRule.cpp  FilterRuleList.cpp  FirewallService.cpp  PacketParser.cpp  RawSocket.cpp  main.cpp
backend/firewall/packet-blocker/: CMakeLists.txt
backend/firewall/packet-blocker/headers/: PacketBlocker.cpp
